[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Camera.gd" type="Script" id=2]
[ext_resource path="res://PortalOwner.gd" type="Script" id=3]
[ext_resource path="res://Test.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_color = Color( 0.933333, 0.517647, 0.517647, 0.341176 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="QuadMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 0.0823529, 0.741176, 1, 0.462745 )

[sub_resource type="PrismMesh" id=5]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 0.403922, 0.109804, 0.67451, 0.478431 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0.67451, 0.572549, 0.109804, 0.478431 )

[node name="Test" type="Spatial"]
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 0.1, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 8 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 2 )

[node name="KinematicBody" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.9287, 0 )

[node name="Camera" parent="KinematicBody/CameraAnchor" index="0"]
script = ExtResource( 2 )

[node name="CameraTop" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 12.4341, 0 )

[node name="CameraSide" type="Camera" parent="."]
transform = Transform( -1.62921e-07, -0.866025, 0.5, 0, 0.5, 0.866025, -1, 1.41093e-07, -8.14603e-08, 5.89588, 12.4341, 0 )

[node name="PortalOwner" type="Spatial" parent="." groups=[
"mirrors",
]]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 12.4341, 0 )
script = ExtResource( 3 )

[node name="Mirror" type="MeshInstance" parent="PortalOwner"]
transform = Transform( 2.7, 0, 0, 0, -1.18021e-07, -1, 0, 2.7, -4.37114e-08, 0, 2.45594, -10.6461 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Inverse" type="MeshInstance" parent="PortalOwner/Mirror"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 3.89768, 2.45594 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="PlayerCopy" type="MeshInstance" parent="PortalOwner/Mirror"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 3.89768, 2.45594 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Mirror2" type="MeshInstance" parent="PortalOwner"]
transform = Transform( -4.39886e-07, 0, 1, 0, 2.7, 0, -2.7, 0, -1.62921e-07, -4.57153, -2.15459, -10.6461 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Inverse2" type="MeshInstance" parent="PortalOwner/Mirror2"]
transform = Transform( 0.2, 0, 1.77635e-15, 0, 0.2, 5.68434e-15, 1.42108e-14, -5.68434e-15, 0.2, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[editable path="KinematicBody"]
